# student_accommodation

./: .gitignore  Procfile  requirements.txt
.ebextensions/: 01_install_custom_lib.config  django.config
accommodation/: forms.py  models.py  sns_utils.py  sqs_utils.py  urls.py  views.py
accommodation/templates/: base.html
accommodation/templates/accommodation/: accommodation_detail.html  accommodation_list.html  room_list.html
accommodation/templates/registration/: login.html  register.html
discountlib/: festival.py
studentacc/: django.config  settings.py
studentaccommodationlib/: pyproject.toml  setup.py
studentaccommodationlib/src/studentaccommodationpkg/: festival_discount.py
studentaccommodationlib/src/studentaccommodationpkg.egg-info/: PKG-INFO  SOURCES.txt
